<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@color/background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/system_upgrade_ask"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelBt"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/shallow_button" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/okBt"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:text="@string/confirm"
                android:background="@drawable/depth_button" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>