<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="560dp"
    android:layout_height="328dp"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/please_enter_super_user_password"
        android:textColor="@color/text_label"
        android:textSize="22sp"
        android:visibility="visible" />


    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:textCursorDrawable="@null"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@drawable/shallow_button"
            android:text="@string/cancel"
            android:textColor="@color/right_text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/depth_button"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>