<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <!--<include layout="@layout/toolbar" />-->

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_display"
                android:layout_width="match_parent"
                android:layout_height="71dp">

                <TextView
                    android:id="@+id/display"
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/display_app"
                    android:textColor="#9999cc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/show_display_app_more"
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="84dp"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_more"
                    android:textColor="#9999cc"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/show_display_app_more_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="56dp" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <ListView
                android:id="@+id/app_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/line"
                android:dividerHeight="2dp"
                android:visibility="gone"></ListView>

            <include layout="@layout/line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/line" />

            <RelativeLayout
                android:id="@+id/layout_hidden"
                android:layout_width="match_parent"
                android:layout_height="71dp">

                <TextView
                    android:id="@+id/hidden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:text="@string/hidden_app"
                    android:textColor="#9999cc"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/show_hidden_app_more"
                    android:layout_width="wrap_content"
                    android:layout_height="71dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="84dp"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_more"
                    android:textColor="#9999cc"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/show_hidden_app_more_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="56dp" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <ListView
                android:id="@+id/app_list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/line"
                android:dividerHeight="2dp"
                android:visibility="gone"></ListView>

            <include layout="@layout/line" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
